...
        android:id="@+id/flag_image_view"
        android:layout_width="match_parent"
        android:layout_height="35pt"
        android:src="@drawable/ic_country" />

    <TextView
        android:id="@+id/country_name"
        style="@style/TextView"
        android:layout_gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textSize="30sp" />

...
